methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:36: error: value BLEU is not a member of object java.awt.Color
  faireFleur(Color.BLEU)
                   ^